--- a/PersonalBlog/app/src/main/res/values/strings.xml
+++ b/PersonalBlog/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">PersonalBlog</string>
     <string name="action_settings">Settings</string>
+
+    <string name="stop_recording_string">Stop Recording</string>
+    <string name="start_recording_string">Start Recording</string>
+    <string name="start_playback_string">Start Playback</string>
+    <string name="stop_playback_string">Stop Playback</string>
+
 </resources>
