--- a/PersonalBlog/app/src/main/res/values/strings.xml
+++ b/PersonalBlog/app/src/main/res/values/strings.xml
@@ -6,5 +6,6 @@
     <string name="start_recording_string">Start Recording</string>
     <string name="start_playback_string">Start Playback</string>
     <string name="stop_playback_string">Stop Playback</string>
+    <string name="title_activity_full_screen">FullScreenActivity</string>
 
 </resources>
